<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinatorLayoutAddToilet"
        android:background="@android:color/white"
        xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/layout_add_new_toilet_margin">

        <TextView
                android:text="@string/str_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tv_add_toilet_txt_size"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_toilet_name"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
                android:textColorHint="@android:color/black"
                android:background="@drawable/bg_edittext"
                android:padding="@dimen/bg_edittext_toilet_padding"
                android:id="@+id/etToiletName"/>

        <TextView
                android:text="@string/str_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tv_add_new_toilet_margin_top"
                android:textSize="@dimen/tv_add_toilet_txt_size"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
        />
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/provider_names"
                android:id="@+id/spinnerCategory"
                android:padding="@dimen/bg_edittext_toilet_padding"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
              />

        <TextView
                android:text="@string/str_latitude_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tv_add_new_toilet_margin_top"
                android:textSize="@dimen/tv_add_toilet_txt_size"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_latitude_longitude"
                android:id="@+id/etToiletLocation"
                android:imeOptions="actionNext"
                android:enabled="false"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
                android:textColorHint="@android:color/black"
                android:background="@drawable/bg_edittext"
                android:padding="@dimen/bg_edittext_toilet_padding"/>

        <TextView
                android:text="@string/str_addresss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tv_add_new_toilet_margin_top"
                android:textSize="@dimen/tv_add_toilet_txt_size"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_toilet_address"
                android:id="@+id/etToiletAddress"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
                android:textColorHint="@android:color/black"
                android:background="@drawable/bg_edittext"
                android:padding="@dimen/bg_edittext_toilet_padding"/>
        <TextView
                android:text="@string/str_added_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tv_add_new_toilet_margin_top"
                android:textSize="@dimen/tv_add_toilet_txt_size"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Arsalan khan"
                android:enabled="false"
                android:id="@+id/etToiletAddedBy"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
                android:textColorHint="@android:color/black"
                android:background="@drawable/bg_edittext"
                android:padding="@dimen/bg_edittext_toilet_padding"
        />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_add_location_from_map"
                android:textAllCaps="false"
                android:id="@+id/btnAddLocationFromMap"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/font_cairo_regular"
                android:textColor="@android:color/white"
                android:layout_marginLeft="@dimen/btn_add_toilet_margin_left_right"
                android:layout_marginRight="@dimen/btn_add_toilet_margin_left_right"
                android:textSize="@dimen/btn_add_toilet_txt_size"
                android:layout_marginTop="@dimen/tv_add_new_toilet_margin_top"
                android:layout_marginBottom="@dimen/tv_add_new_toilet_margin_top"/>

        <!--radio group toilet for male or female-->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_toilet_available_for"
                android:textSize="@dimen/tv_add_toilet_txt_size"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"/>

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/genderRadioGroup"
                android:layout_marginTop="@dimen/tv_add_new_toilet_margin_top">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_male"
                    android:id="@+id/radioMale"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/font_cairo_regular"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_marginRight="@dimen/radio_btn_margin_right"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioFemale"
                    android:text="@string/str_female"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/font_cairo_regular"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_marginRight="@dimen/radio_btn_margin_right"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_both_male_and_female"
                    android:textColor="@android:color/black"
                    android:buttonTint="@color/colorPrimary"
                    android:fontFamily="@font/font_cairo_regular"
                    android:id="@+id/radioBothMaleFemale"/>
        </RadioGroup>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/color_line_separator"
                android:layout_marginTop="@dimen/tv_add_new_toilet_margin_top"
                android:layout_marginBottom="@dimen/tv_add_new_toilet_margin_top"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_available_facilities_of_toilet"
                android:textSize="@dimen/tv_add_toilet_txt_size"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbAccessiblePhysicalChallenge"
                android:text="@string/str_accessible_physical_challenge"
                android:layout_marginTop="@dimen/tv_add_new_toilet_margin_top"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
                android:buttonTint="@color/colorPrimary"
        />

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbHandWash"
                android:text="@string/str_hand_washing_facility"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
                android:buttonTint="@color/colorPrimary"
        />
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbSoap"
                android:text="@string/str_soap"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
                android:buttonTint="@color/colorPrimary"
        />

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbParking"
                android:text="@string/str_parking"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
                android:buttonTint="@color/colorPrimary"
        />
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbSanitaryBin"
                android:text="@string/str_sanitary_disposal_bin"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
                android:buttonTint="@color/colorPrimary"
        />

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbPaymentRequired"
                android:text="@string/str_payment_required"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font_cairo_regular"
                android:buttonTint="@color/colorPrimary"
        />


        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_add_toilet"
                android:textAllCaps="false"
                android:id="@+id/btnAddNewToilet"
                android:layout_marginLeft="@dimen/btn_add_toilet_margin_left_right"
                android:layout_marginRight="@dimen/btn_add_toilet_margin_left_right"
                android:textSize="@dimen/btn_add_toilet_txt_size"
                android:fontFamily="@font/font_cairo_regular"
                android:background="@drawable/bg_button"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/tv_add_new_toilet_margin_top"
                android:layout_marginBottom="@dimen/btn_add_toilet_margin_left_right"/>
    </LinearLayout>


</ScrollView>
    <android.inputmethodservice.KeyboardView
            android:id="@+id/keyboardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_gravity="bottom|center_horizontal"
            android:elevation="6dp"
            android:focusable="true"
            android:visibility="gone"
            android:focusableInTouchMode="true"
    />
</android.support.design.widget.CoordinatorLayout>